# ground_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
projects/ground_cli/: CMakeLists.txt
projects/ground_cli/source/: main.cpp
projects/ground_engine/: CMakeLists.txt
projects/ground_engine/source/ground/: Config.h  Data_Source.cpp  Data_Source.h
projects/trellis_json/: CMakeLists.txt
projects/trellis_json/source/trellis_json/: serialize.cpp  serialize.h
